Add a city search form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main id="main"></main>
+    <main id="main">
+        <form action="#" method="post">
+            <label for="city">City</label>
+            <input type="text" name="city" id="city">
+            <button type="button" id="get-city-btn">Get city!</button>
+        </form>
+
+        <section id="data"></section>
+    </main>
+<script src="get_weather.js" type="module"></script>
 </body>
 </html>
