--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         <form action="#" method="post">
             <label for="city">City</label>
             <input type="text" name="city" id="city">
-            <button type="button" id="get-city-btn">Get city!</button>
+            <button type="button" id="get-city-btn">Get weather info!</button>
         </form>
 
-        <section id="data"></section>
+        <section id="data">
+            <div id="temperature-data"></div>
+            <div id="other-data"></div>
+        </section>
     </main>
 <script src="get_weather.js" type="module"></script>
 </body>
