Change label text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main id="main">
         <form action="#" method="post">
-            <label for="city">City</label>
+            <label for="city">Enter your city name:</label>
             <input type="text" name="city" id="city">
             <button type="button" id="get-city-btn">Get weather info!</button>
         </form>
