Add air pollution data section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <section id="data">
             <div id="temperature-data"></div>
             <div id="other-data"></div>
+            <div id="air-pollution-data"></div>
         </section>
     </main>
 <script src="get_weather.js" type="module"></script>
