--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>The Odin Project Weather App</h1>
+    </header>
     <main id="main">
         <form action="#" method="post">
             <label for="city">Enter your city name:</label>
