--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div id="air-pollution-data"></div>
         </section>
     </main>
+    <footer>Copyright &copy; 2023 <a href="https://github.com/mkj-dev">github.com/mkj-dev</a></footer>
 <script src="get_weather.js" type="module"></script>
 </body>
 </html>
