Change script path

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         </section>
     </main>
     <footer>Copyright &copy; 2023 <a href="https://github.com/mkj-dev">github.com/mkj-dev</a></footer>
-<script src="get_weather.js" type="module"></script>
+<script src="./scripts/get_weather.js" type="module"></script>
 </body>
 </html>
