Create a #weather-img div

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div id="other-data"></div>
             <div id="air-pollution-data"></div>
         </section>
+        <div id="weather-img"></div>
     </main>
     <footer>Copyright &copy; 2023 <a href="https://github.com/mkj-dev">github.com/mkj-dev</a></footer>
 <script src="./scripts/get_weather.js" type="module"></script>
